[package]
name = "roseate"
edition = "2021"
version = "0.1.0-alpha.15"
description = "A small and simple but fancy image viewer built with Rust that's cross platform."
authors = ["Goldy <goldy@devgoldy.xyz>"]
license = "GPL-3.0"
repository = "https://github.com/cloudy-org/roseate/"
rust-version = "1.80"

[dependencies]
cirrus_theming = { path = "./cirrus/theming" }

rfd = "0.15.0"
imagesize = "0.13.0"
eframe = { version = "0.29.1", features = ["default"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"]}
image = {version = "0.25.5", features = ["jpeg", "png"]}
egui_animation = "0.6.0"
simple-easing = "1.0.1"
log = "0.4.22"
env_logger = "0.11.5"
re_format = "0.19.1"
cap = "0.1.2"
clap = {version = "4.5.20", features = ["derive"]}
rand = "0.8.5"
display-info = "0.5.2"
egui-notify = "0.17.0"
svg_metadata = "0.5.1"
textwrap = "0.16.1"
serde = "1.0.215"
dirs = "5.0.1"
toml = "0.8.19"

[profile.dev.package."*"]
opt-level = 3
