[workspace]

[package]
name = "roseate"
edition = "2021"
version = "0.1.0-alpha.15"
description = "A fast as fuck, memory efficient and simple but fancy image viewer built with Rust that's cross-platform."
authors = ["Goldy <goldy@devgoldy.xyz>", "Ananas <ananas@ananas.moe>"]
license = "GPL-3.0"
repository = "https://github.com/cloudy-org/roseate/"
rust-version = "1.80"

[dependencies]
cirrus_egui = {workspace = true}
cirrus_theming = {workspace = true}

rfd = "0.15.1"
imagesize = "0.13.0"
eframe = { version = "0.29.1", features = ["default"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"]}
image = {version = "0.25.5"}
egui_animation = "0.6.0"
simple-easing = "1.0.1"
log = "0.4.22"
env_logger = "0.11.5"
re_format = "0.20.0"
cap = "0.1.2"
clap = {version = "4.5.21", features = ["derive"]}
rand = "0.8.5"
egui-notify = "0.17.0"
svg_metadata = "0.5.1"
textwrap = "0.16.1"
dirs = "5.0.1"
rayon = "1.10.0"
serde_derive = "1.0.215"
serde_json = "1.0"
fs2 = "0.4.3"

toml = {workspace = true}
serde = {workspace = true, features = ["derive"]}

# NOTE: Workspace deps will be removed here when we soon update to the latest commit of cirrus.
[workspace.dependencies]
cirrus_egui = { path = "./cirrus/egui" }
cirrus_theming = { path = "./cirrus/theming" }

egui = "0.29.1"
toml = "0.8.19"
serde = {version = "1.0.215", features = ["derive"]}

# I've now disabled compiling release builds of dependices to speed up dev compile time.
# 
# THIS MEANS IMAGE PROCESSING WILL BE MUCH MUCH 
# SLOWER ON DEV BUILDS COMPARED TO RELEASE BUILDS
# 
# So with that said ALWAYS compile release unless you are developing Roseate.
# 
#[profile.dev.package."*"]
#opt-level = 3