[package]
name = "roseate"
edition = "2024"
version = "0.1.0-alpha.21"
description = "A fancy yet simple image viewer — highly configurable, cross-platform, GPU-accelerated and fast as fu#k."
authors = ["Goldy <goldy@devgoldy.xyz>", "Ananas <ananas@ananas.moe>"]
license = "GPL-3.0"
repository = "https://github.com/cloudy-org/roseate/"
rust-version = "1.89"

[features]
default = ["full", "eframe-linux"]

# Use this feature if you want a lean image viewer that 
# only supports the most common image formats and you don't 
# care about the additional features in the 'full' feature.
basic = []
full = [
    "basic",
    "geo",
]
# A set of opinionated extra features I like to compile on my system 
# but may be out of the scope for the product I actually want to 
# ship to end users.
goldy = []

geo = [
    "dep:reverse_geocoder",
    "dep:country-emoji",
]

# Special linux eframe feature flags
# https://cloudy-org.github.io/wiki/apps/roseate/advanced_installs/#display-server-specific-x11-wayland
eframe-linux = ["eframe-x11-only", "eframe-wayland-only"]

eframe-x11-only = ["dep:eframe", "eframe/x11"]
eframe-wayland-only = ["dep:eframe", "eframe/wayland"]

[dependencies]
cirrus_egui = { path = "../cirrus/egui/v1" }
cirrus_edit = { path = "../cirrus/edit/v1" }
cirrus_path = { path = "../cirrus/path/v1" }
cirrus_error = { path = "../cirrus/error/v1" }
cirrus_config = { path = "../cirrus/config/v1" }
cirrus_theming = { path = "../cirrus/theming/v1" }
cirrus_clap_cli = { path = "../cirrus/clap_cli/v1" }
cirrus_authors = { path = "../cirrus/authors/v1" }
cirrus_softbinds = { path = "../cirrus/soft_binds/v1", features = ["egui"] }

roseate-core = { path = "../core" }

egui = "=0.33.2"
eframe = { version = "=0.33.2", default-features = false, optional = true, features = [
    "accesskit",
    "default_fonts",
    "glow",
]}
egui_extras = { version = "=0.33.2", default-features = false, features = ["image", "http"]}

egui_animation = "0.10.0"
egui-notify = "0.21.0"
rfd = "0.15.3"
simple-easing = "1.0.1"
log = "0.4.27"
env_logger = "0.11.8"
re_format = "0.27.3"
cap = "0.1.2"
clap = {version = "4.5.37", features = ["derive"]}
textwrap = "0.16.2"
dirs = "6.0.0"
fs2 = "0.4.3"
serde_json = "1.0.145"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.42"
derive_more = { version = "2.1.0", features = ["from", "display", "debug"] }

# patches
rand = "0.9.4"
rustls-webpki = "0.103.13"

# additional crates
reverse_geocoder = {version = "4.1.1", optional = true}
country-emoji = {version = "0.3.2", optional = true}


# I've now disabled compiling release builds of dependencies to speed up dev compile time.
#
# THIS MEANS IMAGE PROCESSING WILL BE MUCH MUCH
# SLOWER ON DEV BUILDS COMPARED TO RELEASE BUILDS
#
# So with that said ALWAYS compile release unless you are developing Roseate.
#
#[profile.dev.package."*"]
#opt-level = 3