[package]
name = "roseate-core"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "image-rs-extra-formats",
    "zune-image-extra-formats"
]

hayro-pdf-format = ["dep:hayro"]
# decoders for formats that are either obscure or not as 
# common while being bulky and requiring additional dependencies.
image-rs-extra-formats = ["image/tiff", "image/avif-native"]
zune-image-extra-formats = []

[dependencies]
log = "0.4"
rayon = "1.11.0"
imagesize = "0.15.0"
svg_metadata = "0.5.1"
kamadak-exif = "0.6.1"
bytemuck = { version = "1.24" }

hayro = { version = "0.7.1", optional = true }

# decoder backends
image = {version = "0.25.10", features = ["rayon", "png", "jpeg", "gif", "webp"], default-features = false}
zune-image = {version = "0.4.15", features = ["threads", "simd", "metadata", "png", "jpeg", "jpeg-xl"], default-features = false}

[dev-dependencies]
env_logger = "0.11"