[package]
name = "roseate-core"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "image-rs-extra-formats",
    "zune-image-extra-formats"
]

# decoders for formats that are either obscure or not as 
# common while being bulky and requiring additional dependencies.
image-rs-extra-formats = ["image/tiff", "image/ico", "image/bmp"]
zune-image-extra-formats = []

# formats that cannot be cross-compiled.
native-formats = ["image/avif-native"]

[dependencies]
log = "0.4"
rayon = "1.11.0"
imagesize = "0.15.0"
svg_metadata = "0.5.1"
kamadak-exif = "0.6.1"
bytemuck = { version = "1.24" }

# decoder backends
image = {version = "0.25.10", features = ["rayon", "png", "jpeg", "gif", "webp", "qoi"], default-features = false}
zune-image = {version = "0.4.15", features = ["threads", "simd", "metadata", "png", "jpeg", "jpeg-xl"], default-features = false}

[dev-dependencies]
env_logger = "0.11"