[package]
name = "roseate"
version = "0.1.0"
description = "A small and simple but fancy image viewer built with Rust & Typescript that's cross platform."
authors = ["Goldy <goldy@devgoldy.xyz>"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "cli", "window-all", "fs-read-dir", "fs-read-file"] }
image = "0.25.0"
rfd = "0.14.0"
imagesize = "0.12.0"
tauri-plugin-theme = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
